--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -91,7 +91,7 @@ jobs:
   build-ssh:
     if: ${{inputs.ssh == true}}
     name: 🚀 编译 (Build) - SSH
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - name: 下载编译所需的依赖 (Install the software packages required for compilation)
         run: |
